--- a/.devcontainer/requirements.txt
+++ b/.devcontainer/requirements.txt
@@ -1,2 +1,8 @@
-numpy == 2.2.4
-pandas == 2.2.3
+numpy==2.2.4
+pandas==2.2.3
+beautifulsoup4==4.12.3
+requests==2.32.3
+tqdm==4.66.6
+pyyaml==6.0.2
+boto3==1.35.50
+jinja2==3.1.4
